k8s/01-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: finflow
  labels:
    name: finflow
    environment: production
