k8s/04-eureka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  namespace: finflow
  labels:
    app: eureka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
        - name: eureka
          image: steeltoeoss/eureka-server:latest
          ports:
            - containerPort: 8761
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
  namespace: finflow
spec:
  selector:
    app: eureka-server
  ports:
    - port: 8761
      targetPort: 8761
  type: ClusterIP
