k8s/07-account-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  namespace: finflow
  labels:
    app: account-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      containers:
        - name: account
          image: finflow/account-service:1.0.0
          ports:
            - containerPort: 8082
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8082
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: account-service
  namespace: finflow
spec:
  selector:
    app: account-service
  ports:
    - port: 8082
      targetPort: 8082
  type: ClusterIP
